--- a/composer.json
+++ b/composer.json
@@ -26,6 +26,6 @@
     "psr-4": {
       "Sergiets\\LescriptWildcard\\Src\\": "src/"
     },
-    "files": ["Wildcard.php"]
+    "files": ["WildcardLibrary.php"]
   }
 }
